--- a/react-app/src/components/LoginFormPage/LoginForm.css
+++ b/react-app/src/components/LoginFormPage/LoginForm.css
@@ -6,12 +6,20 @@
     background-image: url(https://assets.untappd.com/assets/v3/images/beer-login-bg.jpg);
     background-size: cover;
     background-repeat: no-repeat;
-}
+  }
   
-.login-form-container {
+  .login-form-container {
     background-color: rgba(255, 255, 255);
     padding: 20px;
     border-radius: 8px;
     box-shadow: 0 2px 6px rgba(0, 0, 0, 0.1);
     text-align: center;
-}
+  }
+  
+  .login-form-logo {
+    margin: 0 auto 20px;
+  }
+  
+  .login-form-logo img {
+    width: 250px;
+  }
