placement of the links

--- a/react-app/src/components/Navigation/Navigation.css
+++ b/react-app/src/components/Navigation/Navigation.css
@@ -5,3 +5,10 @@
 .hidden {
   display: none;
 }
+
+.navBar {
+  background-color: yellow;
+  list-style-type: none;
+  display: flex;
+  justify-content: space-between;
+}
