--- a/react-app/src/components/LandingPage/LandingPage.css
+++ b/react-app/src/components/LandingPage/LandingPage.css
@@ -2,4 +2,58 @@
     width: 100%;
     height: 90vh;
     background-image: url(../../assets/hero-img.jpeg);
+    display: grid;
+    /* grid-template-rows: 1fr 2fr 2fr;
+    grid-template-columns: 1fr 1fr 1fr;
+    grid-template-areas: ""; */
+}
+
+.hero button {
+    background-color: rgba(0, 0, 0, 0);
+    border: 2px solid white;
+    border-radius: 3px;
+    color: white;
+    font-size: 12pt;
+    padding: 15px;
+    margin: 20px 10px 20px 10px;
+}
+
+.hero-content {
+    max-width: 30vw;
+}
+
+.hero-content img {
+    width: 50%;
+    display: flex;
+    margin: 0 auto;
+}
+
+.slogan {
+    color: white;
+    text-align: center;
+    font-size: 10pt;
+    font-weight: 600;
+    margin-top: 0;
+    margin-bottom: 0;
+    letter-spacing: 2px;
+}
+
+.divider {
+    color: #ffc000;
+    font-size: 40pt;
+    font-weight: 200;
+    text-align: center;
+    margin-top: -10px;
+    margin-bottom: -20px;
+    letter-spacing: -12px;
+}
+
+.hero-content h1 {
+    color: white;
+    text-align: center;
+    font-weight: 500;
+}
+
+.app-example, .app-example img {
+    max-width: 40vw;
 }
