--- a/react-app/src/components/LandingPage/LandingPage.css
+++ b/react-app/src/components/LandingPage/LandingPage.css
@@ -2,7 +2,7 @@
     width: 100%;
     height: 90vh;
     background-image: url(../../assets/hero-img.jpeg);
-    display: grid;
+    display: inline-flex;
     /* grid-template-rows: 1fr 2fr 2fr;
     grid-template-columns: 1fr 1fr 1fr;
     grid-template-areas: ""; */
@@ -19,7 +19,7 @@
 }
 
 .hero-content {
-    max-width: 30vw;
+    max-width: 40vw;
 }
 
 .hero-content img {
@@ -31,11 +31,11 @@
 .slogan {
     color: white;
     text-align: center;
-    font-size: 10pt;
-    font-weight: 600;
+    font-size: 8pt;
+    font-weight: 400;
     margin-top: 0;
     margin-bottom: 0;
-    letter-spacing: 2px;
+    letter-spacing: 3px;
 }
 
 .divider {
@@ -52,6 +52,7 @@
     color: white;
     text-align: center;
     font-weight: 500;
+    font-size: 32pt;
 }
 
 .app-example, .app-example img {
