--- a/react-app/src/components/LoginFormPage/LoginForm.css
+++ b/react-app/src/components/LoginFormPage/LoginForm.css
@@ -21,7 +21,7 @@
 }
 
 .login-form-logo img {
-  width: 250px;
+  width: 300px;
 }
 
 .login-form-container {
@@ -39,32 +39,37 @@
   align-items: center;
   border: 1px solid #cccccc;
   border-radius: 4px;
-  padding: 4px 0px 4px 8px;
   margin-bottom: 10px;
   width: 100%;
 }
 
 .login-form-input-container i {
-  margin-right: 8px;
+  margin: 0px 8px;
 }
 
 .login-form-input-container input {
-  width: 100%;
   box-sizing: border-box;
   border: none;
   border-left: 1px solid #cccccc;
   padding: 4px 8px;
+  font-size: 16px;
+  margin: 6px 0px;
+  width: 100%;
+}
+
+.login-form-input-container input:focus {
+  outline: none;
 }
 
 .login-form-container button {
-  width: 100%;
-  padding: 10px;
   background-color: black;
-  color: white;
   border: none;
   border-radius: 4px;
+  color: white;
   cursor: pointer;
   font-weight: bold;
+  padding: 10px;
+  width: 100%;
 }
 
 .login-form-container button.demo-login-button {
