--- a/react-app/src/components/LandingPage/LandingPage.css
+++ b/react-app/src/components/LandingPage/LandingPage.css
@@ -2,10 +2,21 @@
     width: 100%;
     height: 90vh;
     background-image: url(../../assets/hero-img.jpeg);
-    display: inline-flex;
-    /* grid-template-rows: 1fr 2fr 2fr;
-    grid-template-columns: 1fr 1fr 1fr;
-    grid-template-areas: ""; */
+    display: grid;
+    grid-template-rows: auto;
+    grid-template-columns: auto;
+    grid-template-areas: "btns btns"
+    ". image"
+    "txt image"
+    ". image";
+}
+
+.landing-btns {
+    grid-area: btns;
+    display: flex;
+    justify-content: flex-end;
+    margin-bottom: 20px;
+    margin-right: 10px;
 }
 
 .hero button {
@@ -19,7 +30,9 @@
 }
 
 .hero-content {
+    grid-area: txt;
     max-width: 40vw;
+    justify-self: flex-end;
 }
 
 .hero-content img {
@@ -56,5 +69,7 @@
 }
 
 .app-example, .app-example img {
+    grid-area: image;
     max-width: 40vw;
+    justify-self: flex-start;
 }
