Adjusted slogan spacing/hover

--- a/react-app/src/components/LoginFormPage/LoginForm.css
+++ b/react-app/src/components/LoginFormPage/LoginForm.css
@@ -25,6 +25,10 @@
     color: black;
 }
 
+.login-form-logo-slogan a:hover { /* global style has hover color */
+    color: black
+}
+
 .login-form-logo-slogan img {
   width: 300px;
 }
@@ -32,6 +36,9 @@
 .login-form-logo-slogan p {
     margin: 0px;
     margin-top: -10px;
+    font-size: 12px;
+    font-weight: 700;
+    letter-spacing: 4px;
 }
 
 .login-form-container {
