--- a/react-app/src/components/SignupFormPage/SignupForm.css
+++ b/react-app/src/components/SignupFormPage/SignupForm.css
@@ -38,7 +38,7 @@
   margin: 0px;
   margin-top: -10px;
   font-size: 12px;
-  font-weight: 700;
+  font-weight: bold;
   letter-spacing: 4px;
 }
 
@@ -97,11 +97,10 @@
 
 .signup-form-input-group-names {
   display: flex;
-
 }
 
-.signup-form-input-container-name  {
-    justify-content: space-between;
+.signup-form-input-container-name {
+  justify-content: space-between;
 }
 
 .signup-form-input-container-name input {
@@ -110,7 +109,6 @@
   padding: 6px;
   font-size: 16px;
   margin: 6px 0px;
-
 }
 
 .signup-form-container button {
@@ -128,6 +126,10 @@
   margin: 10px 0;
 }
 
+.signup-form-container button.signup-button:hover {
+  background-color: rgba(0, 0, 0, 0.8);
+}
+
 .signup-form-login {
   border-top: 1px solid #dddddd;
   font-weight: bold;
@@ -143,5 +145,5 @@
 }
 
 .signup-form-login a:hover {
-  text-decoration: underline;
+  color: #8a4500d0;
 }
