--- a/react-app/src/components/LandingPage/LandingPage.css
+++ b/react-app/src/components/LandingPage/LandingPage.css
@@ -82,21 +82,11 @@
 }
 
 .search-input {
-    width: 85%;
+    width: 100%;
     height: 70px;
     font-size: 16pt;
     padding-left: 40px;
     border: 0;
-}
-
-.submit-search {
-    margin-left: 2%;
-    font-size: 12pt;
-    color: white;
-    background-color: black;
-    padding: 10px 20px;
-    border: 0;
-    border-radius: 5px;
 }
 
 .features {
@@ -142,4 +132,25 @@
     border: 3px solid white;
     border-radius: 5px;
     margin-left: 50px;
+}
+
+.results-hide {
+    display: none;
+}
+
+.results {
+    z-index: 9;
+    position: absolute;
+    width: 100%;
+    margin-top: 1px;
+    border-bottom: 3px solid gray;
+    background-color: white;
+    max-height: 20vh;
+    overflow-y: scroll;
+}
+
+.result {
+    padding-left: 20px;
+    padding-top: 8px;
+    font-size: 10pt
 }
