--- a/react-app/src/components/DrinksListPage/Drinks.css
+++ b/react-app/src/components/DrinksListPage/Drinks.css
@@ -4,6 +4,7 @@
 
 .DrinkTile div{
     margin: 5px;
+    /* justify-content: center; */
 }
 
 .drinkDetails {
@@ -33,8 +34,8 @@
 }
 
 img {
-    height: 150px;
-    width: 150px;
+    height: 120px;
+    width: 120px;
 }
 
 .drinkInfo {
