--- a/react-app/src/index.css
+++ b/react-app/src/index.css
@@ -5,6 +5,7 @@ html, body {
     height: 100%;
     width: 100%;
     font-family: Open-Sans, sans-serif;
+    background-color: rgb(248, 248, 248);
 }
 
 a {
