--- a/react-app/src/components/LoginFormPage/LoginForm.css
+++ b/react-app/src/components/LoginFormPage/LoginForm.css
@@ -40,6 +40,23 @@
   font-size: 12px;
   font-weight: bold;
   letter-spacing: 4px;
+  margin-bottom: 10px;
+}
+
+.login-form-container-errors {
+  display: flex;
+  justify-content: center;
+  text-align: center;
+  background-color: rgba(255, 0, 0, 0.1);
+  border: 1px solid red;
+  width: 80%;
+  margin: 10px auto;
+}
+
+.login-form-container-errors ul {
+  list-style: none;
+  padding: 0px;
+  font-size: 14px;
 }
 
 .login-form-container form {
