--- a/react-app/src/index.css
+++ b/react-app/src/index.css
@@ -9,11 +9,12 @@ html, body {
 }
 
 a {
-    color: #ffc000;
+    color: #8a4500;
+    text-decoration: none;
 }
 
 a:hover {
-    color: #d6a30a;
+    color: #cb7014;
 }
 
 #root {
