changes for nav

--- a/react-app/src/components/LoginFormPage/LoginForm.css
+++ b/react-app/src/components/LoginFormPage/LoginForm.css
@@ -10,7 +10,7 @@
 
 .login-form-container {
   background-color: rgba(255, 255, 255);
-  padding: 20px 50px;
+  padding: 10px 50px 20px 50px;
   border-radius: 8px;
   box-shadow: 0 2px 6px rgba(0, 0, 0, 0.1);
   text-align: center;
@@ -32,6 +32,7 @@
 
 .login-form-logo-slogan img {
   width: 300px;
+  height: 100px;
 }
 
 .login-form-logo-slogan p {
