--- a/react-app/src/index.css
+++ b/react-app/src/index.css
@@ -1,22 +1,23 @@
 /* TODO Add site wide styles */
-html, body {
-    padding: 0px;
-    margin: 0px;
-    height: 100%;
-    width: 100%;
-    font-family: Open-Sans, sans-serif;
-    background-color: rgb(248, 248, 248);
+html,
+body {
+  padding: 0px;
+  margin: 0px;
+  height: 100%;
+  width: 100%;
+  font-family: Open-Sans, sans-serif;
+  background-color: rgb(248, 248, 248);
 }
 
 a {
-    color: #ffc000;
+  color: #ffc000;
 }
 
 a:hover {
-    color: #d6a30a;
+  color: #d6a30a;
 }
 
 #root {
-    max-width: 100%;
-    overflow-x: hidden;
-  }
+  max-width: 100%;
+  overflow-x: hidden;
+}
