--- a/react-app/src/components/Navigation/Navigation.css
+++ b/react-app/src/components/Navigation/Navigation.css
@@ -24,6 +24,7 @@
   display: flex;
   flex: 0 1 auto;
   justify-content: space-between;
+  align-items: center;
 }
 
 .navbar-inner-links {
@@ -31,6 +32,10 @@
   gap: 20px;
   margin-left: 40px;
   flex-shrink: 0;
+}
+
+.navbar-inner-profile-search {
+  display: flex;
 }
 
 .profile-button {
