Added styling for logged out users

--- a/react-app/src/components/Navigation/Navigation.css
+++ b/react-app/src/components/Navigation/Navigation.css
@@ -38,6 +38,11 @@
   display: flex;
 }
 
+.navbar-inner-login-signup {
+  display: flex;
+  gap: 50px;
+}
+
 .profile-button {
   position: relative;
 }
