--- a/react-app/src/components/Review/Review.css
+++ b/react-app/src/components/Review/Review.css
@@ -9,6 +9,18 @@
     justify-content: space-between;
 }
 
+.review-avatar {
+    display: flex;
+}
+
+.review-avatar img {
+    max-width: 80px;
+    max-height: 80px;
+    width: auto;
+    height: auto;
+    margin-right: 20px;
+}
+
 .star {
     color: #ffc000;
 }
