--- a/react-app/src/components/LandingPage/LandingPage.css
+++ b/react-app/src/components/LandingPage/LandingPage.css
@@ -81,7 +81,7 @@
     border-bottom: 1px solid gray;
 }
 
-.search-input {
+.search-input-landing {
     width: 100%;
     height: 70px;
     font-size: 16pt;
