--- a/react-app/src/components/Navigation/Navigation.css
+++ b/react-app/src/components/Navigation/Navigation.css
@@ -3,7 +3,6 @@
 .navbar-container {
   box-shadow: 0 1px 1px rgba(0, 0, 0, 0.1), inset 0 6px 0 #ffc000;
   border-bottom: 1px solid gray;
-  width: 100%;
   display: flex;
   justify-content: center;
   padding: 15px 20px;
@@ -46,6 +45,7 @@
   width: 100%;
   font-size: 14px;
   border: 0;
+  outline: none;
 }
 
 /* Profile button */
