--- a/react-app/src/components/ReviewFormPage/ReviewForm.css
+++ b/react-app/src/components/ReviewFormPage/ReviewForm.css
@@ -165,3 +165,46 @@
     width: 100%;
     font-family: Open-Sans, sans-serif;
 }
+
+.check-box {
+    /* background-image: url(../../assets/beer_icon_check.png); */
+    background-color: #338632;
+    color:#338632;
+    height: auto;
+    width: auto;
+    max-width: 40px;
+    max-height: 40px;
+    background-position: center center;
+    background-repeat: no-repeat;
+}
+.check-in-button{
+    background-color: #338632;
+    width: 52px;
+    height: 52px;
+    object-fit: cover;
+    background-position: center center;
+    background-repeat: no-repeat;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.check-in-button button {
+    padding: 0px;
+    margin: 0px;
+    border: none;
+    background-color: transparent;
+    background-color: #338632;
+    display: flex;
+    background-position: center center;
+    background-repeat: no-repeat;
+  }
+
+  .check-in-button button img {
+    width: 52px;
+    height: 52px;
+    background-color: #338632;
+    background-position: center center;
+    background-repeat: no-repeat;
+
+  }
