--- a/react-app/src/components/ReviewFormPage/ReviewForm.css
+++ b/react-app/src/components/ReviewFormPage/ReviewForm.css
@@ -209,24 +209,80 @@
 
 }
 
-.tooltip .tooltiptext {
-    visibility: hidden;
-    width: 120px;
-    background-color: black;
-    color: #fff;
-    text-align: center;
-    padding: 5px 0;
-    border-radius: 6px;
-
-    position: absolute;
-    z-index: 1;
-}
-
-.tooltip:hover .tooltiptext {
-    visibility: visible;
-}
 .check-in-button-container{
     display: flex;
     justify-content: end;
     margin: 10px
 }
+
+.tooltip {
+    display:inline-block;
+    position:relative;
+    border-bottom:1px dotted #666;
+    text-align:left;
+}
+
+.tooltip h3 {margin:12px 0;}
+
+.tooltip .bottom {
+    min-width:200px;
+    top:40px;
+    left:50%;
+    transform:translate(-90%, 40%);
+    padding:20px;
+    color: white;
+    background-color: black;
+    font-weight:normal;
+    font-size:13px;
+    border-radius:8px;
+    position:absolute;
+    z-index:99999999;
+    box-sizing:border-box;
+    box-shadow:0 1px 8px rgba(0,0,0,0.5);
+    display:none;
+}
+.tooltiptext .bottom span{
+    font-family: Open-Sans, sans-serif;
+}
+
+.tooltip:hover .bottom {
+    display:block;
+}
+
+.tooltip .bottom img {
+    width:400px;
+}
+
+.tooltip .bottom i {
+    position:absolute;
+    bottom:100%;
+    left:50%;
+    margin-left:-12px;
+    width:24px;
+    height:12px;
+    overflow:hidden;
+}
+
+.tooltip .bottom i::after {
+    content:'';
+    position:absolute;
+    width:12px;
+    height:12px;
+    left:50%;
+    transform:translate(-50%,50%) rotate(45deg);
+    background-color:#EEEEEE;
+    box-shadow:0 1px 8px rgba(0,0,0,0.5);
+}
+
+.bottom::before {
+    content: '';
+    position: absolute;
+    display: block;
+    width: 0px;
+    left: 90%;
+    top: 0;
+    border: 5px solid transparent;
+    border-top: 0;
+    border-bottom: 5px solid black;
+    transform: translate(-50%, calc(-100% - 1px));
+  }
