--- a/react-app/src/components/FriendsPage/FriendsPage.css
+++ b/react-app/src/components/FriendsPage/FriendsPage.css
@@ -11,8 +11,37 @@
   box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
   padding: 20px;
   width: 100%;
-  max-width: 400px;
+  max-width: 500px;
   margin-bottom: 20px;
+}
+
+.friend-info {
+  display: flex;
+  align-items: center;
+  margin: 5px;
+}
+
+.friend-img {
+  width: 40px;
+  height: 40px;
+  border-radius: 50%;
+  margin-right: 10px;
+}
+
+.friend-details {
+  display: flex;
+  flex-direction: column;
+}
+
+.friend-name {
+  font-weight: bold;
+  font-size: 1.2rem;
+  margin-bottom: 3px;
+}
+
+.friend-username {
+  font-size: 0.9rem;
+  color: #888;
 }
 
 .friends-list {
@@ -22,8 +51,8 @@
 
 .friends-list li {
   display: flex;
-  align-items: center;
   justify-content: space-between;
+  align-items: center;
   padding: 10px 0;
   border-bottom: 1px solid #e0e0e0;
 }
