--- a/react-app/src/components/FriendsPage/FriendsPage.css
+++ b/react-app/src/components/FriendsPage/FriendsPage.css
@@ -3,6 +3,7 @@
   align-items: flex-start;
   justify-content: center;
   padding: 20px;
+  gap: 20px;
 }
 
 .friends-container {
@@ -10,7 +11,7 @@
   flex-direction: column;
   align-items: center;
   width: 70%;
-  padding: 20px 40px;
+  padding: 20px 0px;
 }
 
 .friends-card {
@@ -20,6 +21,7 @@
   padding: 20px;
   width: 100%;
   margin-bottom: 20px;
+  box-sizing: border-box;
 }
 
 .friend-info {
