--- a/react-app/src/components/Review/Review.css
+++ b/react-app/src/components/Review/Review.css
@@ -71,6 +71,16 @@
     display: inline-block;
     text-align: center;
 }
+
+.review-edit-button button {
+    padding: 6px 12px;
+    border: none;
+    border-radius: 4px;
+    cursor: pointer;
+    transition: background-color 0.5s ease;
+    margin-right: 5px;
+}
+
 .review-img img {
     height: 120px;
     width: 120px;
