styled buttons besides delete drink

--- a/react-app/src/components/ReviewFormPage/ReviewForm.css
+++ b/react-app/src/components/ReviewFormPage/ReviewForm.css
@@ -222,7 +222,7 @@
     text-align:left;
 }
 
-.tooltip h3 {margin:12px 0;}
+/* .tooltip h3 {margin:12px 0;} */
 
 .tooltiptext .bottom span{
     font-family: Open-Sans, sans-serif;
