--- a/react-app/src/components/ManageDrinks/DeleteDrink.css
+++ b/react-app/src/components/ManageDrinks/DeleteDrink.css
@@ -6,3 +6,25 @@
     color: red;
     font-weight: bold;
 }
+.drink-edit-button {
+    vertical-align: top;
+    display: inline-block;
+    text-align: center;
+    border: none;
+    border-radius: 4px;
+    cursor: pointer;
+    transition: background-color 0.5s ease;
+}
+
+.drink-edit-button:hover {
+    background-color: rgba(128, 128, 128, 0.5);
+}
+.drinkDetails .drink-edit-button{
+    vertical-align: top;
+    display: inline-block;
+    text-align: center;
+    border: none;
+    border-radius: 4px;
+    cursor: pointer;
+    transition: background-color 0.5s ease;
+}
