--- a/react-app/src/components/Review/Review.css
+++ b/react-app/src/components/Review/Review.css
@@ -75,3 +75,16 @@
     height: 120px;
     width: 120px;
 }
+
+.review-edit-button button {
+    padding: 6px 12px;
+    border: none;
+    border-radius: 4px;
+    cursor: pointer;
+    transition: background-color 0.5s ease;
+    margin-right: 5px;
+  }
+
+.review-edit-button button:hover {
+    background-color: rgba(128, 128, 128, 0.5);
+}
