--- a/react-app/src/components/DrinksListPage/Drinks.css
+++ b/react-app/src/components/DrinksListPage/Drinks.css
@@ -49,3 +49,26 @@
 .drinkName {
     font-size: 20px;
 }
+
+.top-feed-full {
+    margin-top: 20px;
+    width: 95%;
+    background-color: white;
+    border-radius: 15px;
+    padding: 20px;
+    box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
+}
+
+.top-feed-full h2 {
+    margin-top: 0;
+}
+
+.form-container-full {
+    margin-top: 20px;
+    width: 90%;
+    background-color: white;
+    border-radius: 15px;
+    padding: 20px;
+    box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
+    margin: 50px auto;
+}
