--- a/react-app/src/components/ProfilePage/ProfilePage.css
+++ b/react-app/src/components/ProfilePage/ProfilePage.css
@@ -1,10 +1,16 @@
 .container {
-    width: 70%;
-    margin: 0 auto;
+    display: flex;
+    align-items: flex-start;
+    justify-content: center;
+    padding: 20px;
+    gap: 20px;
 }
 
 .user-hero {
     height: 250px;
+    width: 92%;
+    margin: 20px auto 0 auto;
+    box-sizing: border-box;
     background-image: url(../../assets/hero-img.jpeg);
     background-size: cover;
     background-position-y: center;
@@ -58,6 +64,7 @@
 }
 
 .sections {
+    width: 95%;
     display: flex;
     justify-content: space-between;
 }
@@ -68,6 +75,7 @@
     background-color: white;
     border-radius: 15px;
     padding: 20px;
+    box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
 }
 
 .user-feed h2 {
@@ -83,6 +91,7 @@
     border-radius: 15px;
     list-style: none;
     height: max-content;
+    box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
 }
 
 .user-top h2 {
