--- a/react-app/src/components/Review/Review.css
+++ b/react-app/src/components/Review/Review.css
@@ -1,7 +1,8 @@
 .review {
-    width: 100%;
+    width: 95%;
     border-top: 1px solid rgb(238, 238, 238);
     padding: 20px 0;
+    margin: 0 auto;
 }
 
 .review-info {
@@ -26,7 +27,7 @@
 }
 
 .beer-img img {
-    width: 50px;
+    width: 100px;
     align-self: flex-end;
 }
 
