--- a/react-app/src/components/ManageDrinks/DeleteDrink.css
+++ b/react-app/src/components/ManageDrinks/DeleteDrink.css
@@ -14,6 +14,7 @@
     border-radius: 4px;
     cursor: pointer;
     transition: background-color 0.5s ease;
+    padding: 0 10px;
 }
 
 .drink-edit-button:hover {
@@ -27,4 +28,15 @@
     border-radius: 4px;
     cursor: pointer;
     transition: background-color 0.5s ease;
+}
+
+.modal-btn {
+    vertical-align: top;
+    display: inline-block;
+    text-align: center;
+    border: none;
+    border-radius: 4px;
+    cursor: pointer;
+    transition: background-color 0.5s ease;
+    padding: 0 10px;
 }
