--- a/react-app/src/components/ManageDrinks/DeleteDrink.css
+++ b/react-app/src/components/ManageDrinks/DeleteDrink.css
@@ -40,3 +40,7 @@
     transition: background-color 0.5s ease;
     padding: 0 10px;
 }
+
+.modal-btn:hover {
+    background-color: rgba(128, 128, 128, 0.5);
+}
