--- a/react-app/src/components/LandingPage/LandingPage.css
+++ b/react-app/src/components/LandingPage/LandingPage.css
@@ -150,11 +150,17 @@
     position: absolute;
     width: 100%;
     margin-top: 1px;
+    right: 0;
+    border-top: 1px solid gray;
     border-bottom: 3px solid gray;
     background-color: white;
     max-height: 20vh;
     overflow-y: scroll;
     padding-bottom: 8px;
+}
+
+.nav-search > .results {
+    margin-top: 25px;
 }
 
 .result {
