--- a/react-app/src/components/ReviewFormPage/ReviewForm.css
+++ b/react-app/src/components/ReviewFormPage/ReviewForm.css
@@ -79,10 +79,10 @@
 
 .review-form-input-container textarea {
     border: none;
-    border-left: 1px solid #cccccc;
+    /* border-left: 1px solid #cccccc; */
     padding: 0px 8px;
     font-size: 16px;
-    margin: 6px 0px;
+    /* margin: 6px 0px; */
     width: 100%;
     font-family: Open-Sans, sans-serif;
 }
