--- a/react-app/src/components/DrinksListPage/Drinks.css
+++ b/react-app/src/components/DrinksListPage/Drinks.css
@@ -103,5 +103,6 @@
     padding: 0px 8px;
     font-size: 16px;
     width: 100%;
+    border-radius: 4px;
     font-family: Open-Sans, sans-serif;
   }
