--- a/react-app/src/components/ReviewFormPage/ReviewForm.css
+++ b/react-app/src/components/ReviewFormPage/ReviewForm.css
@@ -83,6 +83,7 @@
     padding: 0px 8px;
     font-size: 16px;
     /* margin: 6px 0px; */
+    border-radius: 4px;
     width: 100%;
     font-family: Open-Sans, sans-serif;
 }
