clearing some warnings

--- a/react-app/src/components/ReviewFormPage/ReviewForm.css
+++ b/react-app/src/components/ReviewFormPage/ReviewForm.css
@@ -212,7 +212,7 @@
 
 .check-in-button-container{
     display: flex;
-    justify-content: end;
+    justify-content: flex-end;
     margin: 10px
 }
 
