--- a/react-app/src/components/EditProfile/EditProfile.css
+++ b/react-app/src/components/EditProfile/EditProfile.css
@@ -1,3 +1,8 @@
 .edit-profile-container {
     height: 100vh;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    font-size: 2rem;
+    margin: 5px
 }
