links on profile page

--- a/react-app/src/components/ProfilePage/ProfilePage.css
+++ b/react-app/src/components/ProfilePage/ProfilePage.css
@@ -120,3 +120,13 @@
     width: 50px;
     margin-right: 15px;
 }
+
+.stat-title a {
+    color: white;
+}
+
+.stat-title a:hover {
+    color: white;
+    cursor: pointer;
+    text-decoration: underline;
+}
