about-us and links

--- a/react-app/src/components/LandingPage/LandingPage.css
+++ b/react-app/src/components/LandingPage/LandingPage.css
@@ -173,3 +173,8 @@
     text-decoration: none;
     font-weight: 600;
 }
+.about-us {
+    margin-left: 50px;
+    font-size: 16pt;
+    color: white;
+}
